[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparrow-patterns"
version = "0.8.0"
description = "A CLI for updating code patterns in Python projects"
authors = [
    {name = "Sparrow Computing", email = "ben@sparrow.dev"},
]
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "fire",
    "jinja2",
    "python-slugify",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "pytest-cov",
    "types-python-slugify",
]

[project.scripts]
sparrow-patterns = "sparrow_patterns.__main__:main"

[project.entry-points.console_scripts]
sparrow-patterns = "sparrow_patterns.__main__:main"

[tool.setuptools.package-data]
"sparrow_patterns" = ["**/templates/*"]

[tool.pylint.format]
disable = ["all"]
enable = ["unused-import"] 