[metadata]
name = sparrow-patterns
version = 0.5.3
description = A CLI for updating code patterns in Python projects
author = Sparrow Computing
author_email = ben@sparrow.dev
license = MIT

[options]
install_requires = 
    fire
    jinja2
    python-slugify

[options.extras_require]
dev =
    black
    isort
    jupyter
    pydocstyle
    pylint
    types-python-slugify

[options.entry_points]
console_scripts = 
    sparrow-patterns = sparrow_patterns.__main__:main

[options.package_data]
sparrow_patterns = 
    **/templates/*

[pylint.FORMAT]
disable = all
enable = unused-import