[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ project_name }}"
version = "{{ version }}"
{% if description %}description = "{{ description }}"
{% endif %}authors = [
    {name = "{{ author_name }}", email = "{{ author_email }}"},
]
{% if license %}license = {text = "{{ license }}"}
{% endif %}requires-python = ">=3.6"
dependencies = [
    "fire",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "pytest",
    "pytest-cov",
    "uv",
]

[project.scripts]
{{ project_name }} = "{{ source_directory }}.__main__:main"

[project.entry-points.console_scripts]
{{ project_name }} = "{{ source_directory }}.__main__:main"

[tool.pylint.format]
disable = ["all"]
enable = ["unused-import"] 