[metadata]
name = {{ project_name }}
version = {{ version }}
{% if description %}description = {{ description }}
{% endif %}author = {{ author_name }}
author_email = {{ author_email }}
{% if license %}license = MIT
{% endif %}
{% if cli %}[options]
install_requires = 
    fire{% else %}# [options]
# install_requires = 
#     fire{% endif %}

[options.extras_require]
dev =
    black
    isort
    pydocstyle
    pylint
    pytest
    pytest-cov
    jupyter

{% if cli %}[options.entry_points]
console_scripts = 
    {{ project_name }} = {{ source_directory }}.__main__:main

{% endif %}[pylint.FORMAT]
disable = all
enable = unused-import