[metadata]
name = {{ project_name }}
version = {{ version }}
{% if description %}description = {{ description }}
{% endif %}author = {{ author_name }}
author_email = {{ author_email }}
{% if license %}license = MIT
{% endif %}
[options]
install_requires = 
    fire

[options.extras_require]
dev =
    jupyter
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    {{ project_name }} = {{ source_directory }}.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import
