# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "{{ project_name }}"
version = "{{ version }}"
description = "{{ description }}"
license = "{% if license %}{{ license }}{% endif %}"
authors = ["{{ author_name }} <{{ author_email }}>"]
packages = [{ include = "{{ source_directory }}" }]

[[tool.poetry.source]]
url = "https://pypi.org/simple/"
name = "public-pypi"

[[tool.poetry.source]]
url = "https://pypi.fury.io/sparrow/"
name = "sparrow"
secondary = true{% if cli %}

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"{{ project_name }}" = "{{ source_directory }}.__main__:main"{% endif %}

[tool.poetry.dependencies]
python = ">=3.9,<3.11"{% if gpu %}
aioboto3 = "9.5.0"
aiobotocore = "2.2.0"
boto3 = "1.21.21"
botocore = "1.24.21"
s3fs = "2022.3.0"
s3transfer = "0.5.2"
dvc = {"extras" = ["s3"], version = "^2.10.2"}
sparrow-datums = "^0.5.5"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.10.0%2Bcu113-cp39-cp39-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl" }
onnxruntime = "^1.11.0"
pytorch-lightning = "^1.6.0"
sparrow-tracky = "^0.2.1"
imageio = "^2.16.1"
imageio-ffmpeg = "^0.4.5"
darwin-py = "^0.7.12"
matplotlib = "^3.5.1"
wandb = "^0.12.11"
imgaug = "^0.4.0"
pillow = "~9.0.1"{% endif %}{% if cli %}
fire = "^0.4.0"{% endif %}

[tool.poetry.dev-dependencies]
bandit = "^1.7.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
pytest = "^6.2.5"
pyupgrade = "^2.29.1"
safety = "^1.10.3"
coverage = "^6.1.2"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
pre-commit = "^2.17.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 88

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | _build
    | buck-out
    | build
    | dist
    | env
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.9
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = true
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pylint.messages_control]
disable = ["all"]
enable = ["unused-import"]

[tool.pydocstyle]
convention = "numpy"
match = '((?!_test).)*\.py'
add-ignore = "D100"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "{{ source_directory }}"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
